# Android-OpenCV-EdgeViewer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/edgeviewer1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv_processor.cpp  opencv_processor.hpp
app/src/main/java/com/example/edgeviewer1/: MainActivity.java
app/src/main/java/com/example/edgeviewer1/camera/: CameraController.java  FrameListener.java
app/src/main/java/com/example/edgeviewer1/gl/: GLView.java
app/src/main/java/com/example/edgeviewer1/jni/: NativeBridge.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgeviewer1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
